--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "hypertension-risk-prediction-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -25,7 +25,7 @@
   "contributors": [],
   "scripts": {
     "start" : "node index.js",
-    "dev": "",
+    "dev": "nodemon index.js",
     "test": ""
   },
   "dependencies": {
